# ROSbotHand

./: .gitignore  ADC_Reader.py  CMakeLists.txt  Classifier.py  Controller.py  README.md  STFT.py  gesty.txt  hand_control.py  model4chwyty.pkl  names.txt  package.xml
launch/: file.launch
msg/: grip.msg  zeros.msg
src/: ADC_Node.cpp
